WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63260
[chromium] Fix WebScrollBarImpl on Mac after recent smooth scrolling changes
https://bugs.webkit.org/show_bug.cgi?id=63260
Summary
[chromium] Fix WebScrollBarImpl on Mac after recent smooth scrolling changes
John Abd-El-Malek
Reported
2011-06-23 09:40:05 PDT
[chromium] Fix WebScrollBarImpl on Mac after recent smooth scrolling changes
Attachments
Patch
(2.58 KB, patch)
2011-06-23 09:50 PDT
,
John Abd-El-Malek
tony
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Abd-El-Malek
Comment 1
2011-06-23 09:50:28 PDT
Created
attachment 98360
[details]
Patch
John Abd-El-Malek
Comment 2
2011-06-23 10:01:27 PDT
Sailesh/Scott: can one of you look at this to see if it's reasonable? Tony can then approve. Background: the chrome pdf plugin reuses WebKit scrollbars through the WebScrollbar API. Sometime in the last few weeks, it stopped working on Mac. It looks to me like it's related to the smooth scrolling code, since methods on ScrollableArea that weren't used before started being called. This is tested in Chrome, but unfortunately there was another problem with the mac bots that run these tests so that they were red before this regressed. I'm following up on getting those green again.
Sailesh Agrawal
Comment 3
2011-06-23 10:25:13 PDT
Looks good to me. It might be good to replace references to smooth scrolling with "ScrollAnimator". Currently we use the scroll animator with smooth scrolling disabled.
John Abd-El-Malek
Comment 4
2011-06-23 10:35:35 PDT
done. thanks for the quick lookover. i will merge this to m13 branch as well.
John Abd-El-Malek
Comment 5
2011-06-23 10:36:18 PDT
Committed
r89584
: <
http://trac.webkit.org/changeset/89584
> (webkit-patch land crashed)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug