2011-06-23  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Tony Chang.

        [chromium] Fix WebScrollBarImpl on Mac after recent smooth scrolling changes
        https://bugs.webkit.org/show_bug.cgi?id=63260

        * src/WebScrollbarImpl.cpp:
        (WebKit::WebScrollbarImpl::visibleHeight):
        (WebKit::WebScrollbarImpl::visibleWidth):
        (WebKit::WebScrollbarImpl::contentsSize):
        (WebKit::WebScrollbarImpl::overhangAmount):
        * src/WebScrollbarImpl.h:


Canonical link: https://commits.webkit.org/78890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89584 268f45cc-cd09-0410-ab3c-d52691b4dbfc